--- a/textils/templates/index.html
+++ b/textils/templates/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Template</title>
+    <title>Text Utils</title>
 </head>
 <body>
-<h1>main ek nayi nayi coder hu.</h1>
-{{name}} is in {{place}}.
-<form action="\removepunc" method="get">
-     <textarea name="text" style="margin: 0px; width: 1509px; height: 162px;"></textarea>
-    <button type="submit">Analyse Text</button>
+<h1>Welcome to the text analyzer. Enter your text below</h1>
+<form action='/analyze' method='get'>
+    <textarea name='text' style='margin: 0px; width: 721px; height: 93px;'></textarea><br>
+
+    <input type="checkbox" name="removepunc"> Remove Punctuations<br>
+    <button type='submit'> Analyze Text</button>
+
 </form>
 </body>
 </html>
